--- a/tic-tac-toe/tictactoeneu.css
+++ b/tic-tac-toe/tictactoeneu.css
@@ -20,6 +20,7 @@ div span {
     background-color: #101010;
     padding: 25px;
     border-radius: 25px;
+    min-height: 770px;
 
 }
 
@@ -75,7 +76,7 @@ div span {
 }
 
 .gitter{
-    background-color: black;
+    background-color: #000000;
     cursor: pointer;
     align-items: center;
     justify-content: center;
@@ -135,14 +136,15 @@ input {
     align-items: center;
     justify-content: center;
     height: 40px;
-    width: 300px;
-    margin: 10px;
+    margin: 20px;
 
 }
 
 #demo {
 
     margin: 0 auto;
+    display:inline-flex;
+    
 }
 
 @keyframes highlight {
@@ -156,4 +158,40 @@ input {
 
 .highlight {
     animation: highlight 1s;
+}
+
+input[type=text] {
+    width: 75px;
+    height: 30px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 14px;
+    background-color: black;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 5px 5px 5px 5px;
+    transition: width 0.4s ease-in-out;
+    margin-right: 10px;
+  }
+
+  input[type=text]:focus {
+    width: 42%;
+  }
+
+#inputSymbol{
+    height : 20px;
+    margin-left: 15px;s
+    margin-top: 0px;
+    margin-right:15px;
+    margin-bottom: -5px;
+
+
+}
+
+#counterSymbol{
+    max-height: 25px;
+   margin-top : 0px;
+   margin-bottom: 0px;
+   
+
 }
