--- a/tic-tac-toe/tictactoeneu.css
+++ b/tic-tac-toe/tictactoeneu.css
@@ -5,23 +5,22 @@
 }
 
 body {
-    font-family: sans-serif;
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    color: white;
+        font-family: sans-serif;
+        display: flex;
+        justify-content: center;
+        background-color: black;
+        color: white;
 }
+
 div span {
     color: #949494;
 }
-
 
 .gameHintergrund {
     background-color: #101010;
     padding: 25px;
     border-radius: 25px;
     min-height: 770px;
-
 }
 
 .ticTacToeUeberschrift{
@@ -30,27 +29,24 @@ div span {
 }
 
 .werIstDran{
- text-align: center;
+    text-align: center;
     margin-top:0px;
     font-size: 20px;
     color: white;
-   
 }
 
 .werHatGewonnen{
     text-align: center;
-       margin-top:0px;
-       font-size: 20px;
-       color: white;
-    
-      
-   }
+    margin-top:0px;
+    font-size: 20px;
+    color: white;
+}
 
 .button{
     font: 12px sans-serif; /*Schriftfont*/
     display: block; /* Angabe zur horizontalen Anordnung*/
     text-align: center; /* horizontale textausrichtung */
-   /* vertical-align: middle; /* vertikale textausrichtung*/
+    /* vertical-align: middle; /* vertikale textausrichtung*/
     padding: 0.5rem 1rem; /* Innenabstand */
     border-radius: 0.3rem; /* Definition Kantenrundng*/
     color: white; /* textfarbe */
@@ -59,11 +55,11 @@ div span {
     margin-top: 5px; /* aussenabstand nach oben */ 
     transition: all 0.5s ease;    /* fading - angabe like 0.5s */
     cursor: pointer; /* Der Mauszeiger wird zum Zeiger*/
-    }
+}
 
-  .button:hover {
+.button:hover {
     background-color: #2e2e2e; 
-  } 
+} 
 
 .spielfeld {
     display: grid;
@@ -84,28 +80,26 @@ div span {
     width: 100px;
     margin: 10px;
 }
+
 .gitter:hover {
     background-color: #2e2e2e; 
-  } 
+} 
 
 .x {
     background: url('images/cancel.png');
-
 }
 
 
 .o {
-    background: url('images/circle.png');
-    
+    background: url('images/circle.png');   
 }
 
 
 
 .letterSpacingPoint {
-
     letter-spacing: -6px;
-
 }
+
 input {
     display: inline;
     width: 10%;
@@ -120,39 +114,36 @@ input {
 
 .zentrieren{
     justify-content: center;
-
+    text-align: center;
 }
 
 .countdown{
     text-align: center;
-       margin-top:0px;
-       font-size: 15px;
-       color: white;
-       line-height: 0.1;
-   }
-    
+    margin-top:0px;
+    font-size: 15px;
+    color: white;
+    line-height: 0.1;
+}
+
 .space{
 
     align-items: center;
     justify-content: center;
     height: 40px;
     margin: 20px;
-
 }
 
 #demo {
-
     margin: 0 auto;
     display:inline-flex;
-    
 }
 
 @keyframes highlight {
     0% {
-        background: #2e2e2e; 
+    background: #2e2e2e; 
     }
     100% {
-        background: none;
+    background: none;
     }
 }
 
@@ -172,26 +163,33 @@ input[type=text] {
     padding: 5px 5px 5px 5px;
     transition: width 0.4s ease-in-out;
     margin-right: 10px;
-  }
+}
 
-  input[type=text]:focus {
+input[type=text]:focus {
     width: 42%;
-  }
+}
 
 #inputSymbol{
     height : 20px;
-    margin-left: 15px;s
+    margin-left: 15px;
     margin-top: 0px;
     margin-right:15px;
     margin-bottom: -5px;
-
-
 }
 
 #counterSymbol{
     max-height: 25px;
-   margin-top : 0px;
-   margin-bottom: 0px;
-   
-
+    margin-top : 0px;
+    margin-bottom: 0px;
 }
+
+#inputSpielfeldGroesse{
+    width: 45px;
+    height: 30px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 18px;
+    background-color: black;
+    margin-right: 10px;
+}
+
